	* Incremented the package version to 3.1.0int2.
2019-10-28 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in 'rdxport.cgi' that caused a check of the
	Rivendell services to be triggered each time a WebAPI function was
	invoked.
2019-10-28 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in rdimport(1) that caused a segfault when
	invoked with the '--metadata-pattern' and '--log-syslog' switches.
2019-10-30 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in rdsoftkeys(1) that threw a segfault at
	startup.
2019-10-30 Fred Gleason <fredg@paravelsystems.com>
	* Added an rd.conf(5) man page.
2019-10-30 Fred Gleason <fredg@paravelsystems.com>
	* Added an rdsoftkeys(1) man page.
2019-10-31 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 3.2.0.
2019-11-20 Fred Gleason <fredg@paravelsystems.com>
	* Added interlocks to the 'Edit Switcher' and 'Edit Serial Ports'
	dialogs in rdadmin(1) to prohibit use of a disabled serial device.
2019-11-20 Fred Gleason <fredg@paravelsystems.com>
	* Reindented switch statements in 'rdadmin/edit_matrix.cpp'.
2019-11-20 Fred Gleason <fredg@paravelsystems.com>
	* Reindented switch statements in 'rdadmin/edit_ttys.cpp'.
2019-11-21 Fred Gleason <fredg@paravelsystems.com>
	* Restored 'End of List' markers to the 'PRE-IMPORT CARTS' and
	'POST-IMPORT CARTS' lists in the 'Editing Event' dialog in
	rdlogmanager(1).
2019-11-21 Fred Gleason <fredg@paravelsystems.com>
	* Implemented support for non-realtime library filtering in the
	'Editing Event' dialog in rdlogmanager(1).
2019-11-22 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in rdimport(1) that caused null characters to
	be written to cart metadata fields when importing files containing
	an 'AIR1' RIFF chunk.
2019-11-25 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in the cart selector dialog that caused
	default focus to be lost on the 'Filter' control after second
	and subsequent invocations.