@@ -24,7 +24,7 @@
 /*
  * Current Database Version
  */
-#define RD_VERSION_DATABASE 311
+#define RD_VERSION_DATABASE 312
 
 
 #endif  // DBVERSION_H
